[project]
name = "{{ cookiecutter.hyphenated }}"
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
{% endif %}

[project.optional-dependencies]
test = ["pytest"]
